<resources>
    <string name="pref_video_quality_entry_low">Low</string>
    <string name="pref_video_quality_entry_medium">Medium</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_fine">Fine</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M pixels</string>
    <string name="pref_camera_whitebalance_entry_twilight">Twilight</string>
    <string name="pref_camera_whitebalance_entry_shade">Shade</string>
    <string name="pref_camera_whitebalance_entry_warm_fluorescent">Warm fluorescent</string>
    <string name="pref_camera_whitebalance_entry_tungsten">Tungsten</string>
    <string name="pref_camera_normal_capture_default">normal</string>
    <string name="pref_camera_normal_capture_title">Capture mode</string>
    <string name="pref_camera_capturemode_entry_normal">Normal</string>
    <string name="pref_camera_capturemode_enrty_fb">Face beauty</string>
    <string name="pref_camera_capturemode_entry_bestshot">Best shot</string>
    <string name="pref_camera_capturemode_entry_evbracketshot">EV bracket shot</string>
    <string name="pref_camera_capturemode_entry_smileshot">Smile shot</string>
    <string name="pref_camera_capturemode_entry_continuous">Continuous shot</string>
    <string name="pref_camera_burstshot_4">4 shots</string>
    <string name="pref_camera_burstshot_8">8 shots</string>
    <string name="pref_camera_burstshot_16">16 shots</string>
    <string name="pref_camera_hdr_title">HDR</string>
    <string name="pref_camera_hdr_default">off</string>
    <string name="pref_camera_hdr_on">On</string>
    <string name="pref_camera_hdr_off">Off</string>
    <string name="mav_dialog_title">MAV</string>
    <string name="accessibility_switch_to_mav">Switch to multi angle view</string>
    <string name="pref_camera_capturemode_default">normal</string>
    <string name="savingImage">Saving picture…</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_iso_entry_auto">Auto</string>
    <string name="pref_camera_iso_entry_100">100</string>
    <string name="pref_camera_iso_entry_200">200</string>
    <string name="pref_camera_iso_entry_400">400</string>
    <string name="pref_camera_iso_entry_800">800</string>
    <string name="pref_camera_iso_entry_1600">1600</string>
    <string name="pref_camera_exposuremeter_default">center</string>
    <string name="pref_camera_exposuremeter_title">AE meter</string>
    <string name="pref_camera_exposuremeter_entry_center">Center</string>
    <string name="pref_camera_exposuremeter_entry_spot">Spot</string>
    <string name="pref_camera_exposuremeter_entry_average">Average</string>
    <string name="pref_camera_focusmeter_default">spot</string>
    <string name="pref_camera_focusmeter_title">Focus meter</string>
    <string name="pref_camera_focusmeter_dialogtitle">Focus mode</string>
    <string name="pref_camera_focusmeter_entry_spot">Single zone</string>
    <string name="pref_camera_focusmeter_entry_multi">Multi zone</string>
    <string name="pref_camera_fdmode_default">on</string>
    <string name="pref_camera_edge_default">middle</string>
    <string name="pref_camera_edge_title">Sharpness</string>
    <string name="pref_camera_hue_default">middle</string>
    <string name="pref_camera_hue_title">Hue</string>
    <string name="pref_camera_saturation_default">middle</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_brightness_default">middle</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_contrast_default">middle</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_dip_entry_low">Low</string>
    <string name="pref_camera_dip_entry_middle">Medium</string>
    <string name="pref_camera_dip_entry_high">High</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_whiteboard">Whiteboard</string>
    <string name="pref_camera_coloreffect_entry_blackboard">Blackboard</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
    <string name="pref_camera_coloreffect_entry_sepiablue">Sepia Blue</string>
    <string name="pref_camera_coloreffect_entry_sepiagreen">Sepia Green</string>
    <string name="pref_camera_exposure_default">0</string>
    <string name="toast_mav_how_to_capture">Press the shutter button and move the camera to the right.</string>
    <string name="pref_camera_selftimer_default">0</string>
    <string name="pref_camera_selftimer_title">Self timer</string>
    <string name="pref_camera_selftimer_entry_off">Off</string>
    <string name="pref_camera_selftimer_entry_2">2 seconds</string>
    <string name="pref_camera_selftimer_entry_10">10 seconds</string>
    <string name="pref_camera_focusmode_entry_continuous">continuous</string>
    <string name="pref_camera_capturemode_entry_asd">Auto scene detect</string>
    <string name="pref_camera_antibanding_default">auto</string>
    <string name="pref_camera_antibanding_title">Anti-flicker</string>
    <string name="pref_camera_antibanding_entry_auto">Auto</string>
    <string name="pref_camera_antibanding_entry_50hz">50Hz</string>
    <string name="pref_camera_antibanding_entry_60hz">60Hz</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_save_location_sdcard">Sd card</string>
    <string name="pref_camera_save_location_phone">Phone</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_sports">Sports</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candle light</string>
    <string name="pref_camera_scenemode_entry_normal">@string/pref_camera_capturemode_entry_normal</string>
    <string name="pref_camera_eis_title">EIS</string>
    <string name="pref_camera_eis_default">off</string>
    <string name="pref_camera_eis_on">On</string>
    <string name="pref_camera_eis_off">Off</string>
    <string name="pref_camera_recordaudio_default">on</string>
    <string name="pref_camera_recordaudio_title">Microphone</string>
    <string name="pref_camera_recordaudio_entry_off">Off</string>
    <string name="pref_camera_recordaudio_entry_on">On</string>
    <string name="pref_camera_video_focusmode_default">infinity</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_duration_entry_mms">%1$d seconds</string>
    <string name="pref_camera_video_duration_entry_10">10 minutes</string>
    <string name="pref_camera_video_duration_entry_30">30 minutes</string>
    <string name="pref_camera_video_duration_entry_60">60 minutes</string>
    <string name="toast_video_recording_pause_hint">Long press shutter button to pause recording</string>
    <string name="toast_video_recording_not_available">Please stop other recording applications before using video camera.</string>
    <string name="toast_autorama_how_to_capture_ics">Press the shutter button to take the first image and then move your camera in one direction to overlay focus area to the blue square.</string>
    <string name="video_hd_recording_default">normal</string>
    <string name="pref_camera_video_hd_recording_title">Audio mode</string>
    <string name="pref_camera_zsd_title">ZSD</string>
    <string name="pref_camera_zsd_default">off</string>
    <string name="pref_camera_continuous_number_title">Capture number</string>
    <string name="pref_camera_continuous_number_default">4</string>
    <string name="pref_camera_image_properties_default">Default</string>
    <string name="pref_camera_image_properties_title">Image Properties</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">10</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_video_effect_default">none</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="camera_print">Print</string>
    <string name="stereo3d_mode_switchto_2d">Switch to 2D mode</string>
    <string name="picture_quality">PQ</string>
    <string name="number_zero">"  0"</string>
    <string name="SkinTone">Skin tone(Hue): 5</string>
    <string name="GrassTone">Grass tone(Hue): 5</string>
    <string name="Sharpness">Sharpness: 5</string>
    <string name="SkyTone">Sky tone(Hue): 5</string>
    <string name="Color">Global Sat.: 0</string>
    <string name="Sky_tone_Sat">Sky tone(Sat): 0</string>
    <string name="Grass_tone_Sat">Grass tone(Sat): 0</string>
    <string name="Skin_tone_Sat">Skin tone(Sat): 0</string>
    <string name="SGS_number">6</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="Import">Import</string>
</resources>