<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:entryValues="@array/pref_camera_exposure_entryvalues" camera:entries="@array/pref_camera_exposure_entries" camera:icons="@array/camera_exposure_icons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/camera_scenemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" />
    <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:icons="@array/camera_id_icons" />
    <ListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" />
    <ListPreference camera:title="@string/pref_camera_edge_title" camera:key="pref_camera_edge_key" camera:defaultValue="@string/pref_camera_edge_default" camera:entryValues="@array/pref_camera_dip_entryvalues" camera:entries="@array/pref_camera_dip_entries" />
    <ListPreference camera:title="@string/pref_camera_hue_title" camera:key="pref_camera_hue_key" camera:defaultValue="@string/pref_camera_hue_default" camera:entryValues="@array/pref_camera_dip_entryvalues" camera:entries="@array/pref_camera_dip_entries" />
    <ListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_dip_entryvalues" camera:entries="@array/pref_camera_dip_entries" />
    <ListPreference camera:title="@string/pref_camera_brightness_title" camera:key="pref_camera_brightness_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_dip_entryvalues" camera:entries="@array/pref_camera_dip_entries" />
    <ListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_dip_entryvalues" camera:entries="@array/pref_camera_dip_entries" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" camera:icons="@array/camera_coloreffect_icons" />
    <IconListPreference camera:title="@string/pref_camera_selftimer_title" camera:key="pref_camera_self_timer_key" camera:defaultValue="@string/pref_camera_selftimer_default" camera:entryValues="@array/pref_camera_selftimer_entryvalues" camera:entries="@array/pref_camera_selftimer_entries" camera:icons="@array/camera_selftimer_icons" />
    <ListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@array/pref_camera_antibanding_default_array" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" />
    <ListPreference camera:title="@string/pref_camera_save_location_title" camera:key="pref_camera_save_location_key" camera:defaultValue="@string/pref_camera_save_location_phone" camera:entryValues="@array/pref_camera_save_location_entryvalues" camera:entries="@array/pref_camera_save_location_entries" />
    <ListPreference camera:title="@string/pref_camera_zsd_title" camera:key="pref_camera_zsd_key" camera:defaultValue="@string/pref_camera_zsd_default" camera:entryValues="@array/pref_camera_zsd_entryvalues" camera:entries="@array/pref_camera_zsd_entries" />
    <ListPreference camera:title="@string/pref_camera_continuous_number_title" camera:key="pref_camera_shot_number" camera:defaultValue="@string/pref_camera_continuous_number_default" camera:entryValues="@array/pref_camera_continuous_number_entryvalues" camera:entries="@array/pref_camera_continuous_number_entries" />
    <IconListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:defaultValue="@string/pref_video_quality_default" camera:entryValues="@array/pref_video_quality_entryvalues" camera:entries="@array/pref_video_quality_entries" />
    <IconListPreference camera:title="@string/pref_video_time_lapse_frame_interval_title" camera:key="pref_video_time_lapse_frame_interval_key" camera:defaultValue="@string/pref_video_time_lapse_frame_interval_default" camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues" camera:entries="@array/pref_video_time_lapse_frame_interval_entries" camera:icons="@array/video_timelapse_icons" />
    <IconListPreference camera:title="@string/pref_video_effect_title" camera:key="pref_video_effect_key" camera:defaultValue="@string/pref_video_effect_default" camera:entryValues="@array/pref_video_effect_entryvalues" camera:entries="@array/pref_video_effect_entries" camera:icons="@array/video_effect_icons" />
    <ListPreference camera:title="@string/pref_camera_recordaudio_title" camera:key="pref_camera_recordaudio_key" camera:defaultValue="@string/pref_camera_recordaudio_default" camera:entryValues="@array/pref_camera_recordaudio_entryvalues" camera:entries="@array/pref_camera_recordaudio_entries" />
    <ListPreference camera:title="@string/pref_camera_video_hd_recording_title" camera:key="pref_camera_video_hd_recording_key" camera:defaultValue="@string/video_hd_recording_default" camera:entryValues="@array/pref_camera_video_hd_recording_entryvalues" camera:entries="@array/pref_camera_video_hd_recording_entries" />
    <ListPreference camera:title="@string/pref_camera_image_properties_title" camera:key="pref_camera_image_properties_key" camera:defaultValue="@string/pref_camera_image_properties_default" camera:entryValues="@array/pref_camera_image_properties_entryvalues" camera:entries="@array/pref_camera_image_properties_entries" />
</PreferenceGroup>
