<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_ptp_holo_light" android:id="@id/action_import" android:visible="false" android:title="@string/Import" android:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:enabled="true" android:id="@id/action_share" android:visible="false" android:title="@string/share" android:showAsAction="ifRoom" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_switch_to_2d" android:id="@id/action_switch_stereo_mode" android:visible="false" android:title="@string/stereo3d_mode_switchto_2d" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/action_delete" android:visible="false" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_slideshow_holo_light" android:id="@id/action_slideshow" android:title="@string/slideshow" android:showAsAction="never" />
    <item android:id="@id/action_edit" android:visible="false" android:title="@string/edit" android:showAsAction="never" />
    <item android:id="@id/action_print" android:visible="false" android:title="@string/camera_print" android:showAsAction="never" />
    <item android:id="@id/action_rotate_ccw" android:visible="false" android:title="@string/rotate_left" android:showAsAction="never" />
    <item android:id="@id/action_rotate_cw" android:visible="false" android:title="@string/rotate_right" android:showAsAction="never" />
    <item android:id="@id/action_crop" android:visible="false" android:title="@string/crop_action" android:showAsAction="never" />
    <item android:id="@id/action_setas" android:visible="false" android:title="@string/set_image" android:showAsAction="never" />
    <item android:id="@id/action_details" android:visible="false" android:title="@string/details" android:showAsAction="never" />
    <item android:id="@id/action_protect_info" android:visible="false" android:title="@com.mediatek:string/drm_protectioninfo_title" android:showAsAction="never" />
    <item android:id="@id/action_show_on_map" android:visible="false" android:title="@string/show_on_map" android:showAsAction="never" />
    <item android:id="@id/action_picture_quality" android:visible="false" android:title="@string/picture_quality" android:showAsAction="never" />
</menu>